bppackaging/src/objects/Kit_Header__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Split__c</fullName>
        <defaultValue>true</defaultValue>
        <description>a checkbox indicator to control whether or not the kit can be split apart once it has been added to an Items sub-section of a customer order.  By default this will be set to True</description>
        <label>Can Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Required Field.  A unique identifier for the Kit created by the user.</description>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Concern__c</fullName>
        <label>Concern</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correction__c</fullName>
        <label>Correction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Required Field.  A general description of the kit</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The dollar value that the kit is fixed at.</description>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kit_Unique_Name__c</fullName>
        <formula>Code__c &amp; &apos; - &apos; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kit Unique Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Make</label>
        <referenceTo>Unit_Make__c</referenceTo>
        <relationshipLabel>Kit Headers</relationshipLabel>
        <relationshipName>Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Kit Headers</relationshipLabel>
        <relationshipName>Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Labours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Labours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box indicator to restrict the use of the kit to Service Sections only.  It also controls the availability of the additional service-specific fields in the modal window or for display in the Info section when viewing a kit.  By default this will be set to False.</description>
        <label>Service Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Active__c = TRUE, &apos;Active&apos; , &apos;Inactive&apos;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubModel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubModel</label>
        <referenceTo>Unit_Model__c</referenceTo>
        <relationshipLabel>Kit Headers (SubModel)</relationshipLabel>
        <relationshipName>Kit_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Kit Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Active__c</columns>
        <columns>Can_Split__c</columns>
        <columns>Cause__c</columns>
        <columns>Concern__c</columns>
        <columns>Correction__c</columns>
        <columns>Fixed_Price__c</columns>
        <columns>Fixed_Price_Flag__c</columns>
        <columns>Kit_Unique_Name__c</columns>
        <columns>Service_Kit__c</columns>
        <columns>SubModel__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KH-{00000000}</displayFormat>
        <label>Kit Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>